Revert "try different tutorial title"
This reverts commit dce9995b6f7f6409770c90f6115fcc840160f14e.

--- a/tutorial.yaml
+++ b/tutorial.yaml
@@ -1,4 +1,4 @@
-title: "Learn Angular"
+title: "Learn Angular 1.4"
 cover: cover.png
 teaser_text: |
     This tutorial will challenge you to learn Angular 1.4 in order to build a prototype of an web app or ionic app.
